Fix Litter button size & wrap rules

--- a/scratchpad/to-do-app/site.css
+++ b/scratchpad/to-do-app/site.css
@@ -62,16 +62,16 @@ form textarea {
   padding: 20px;
 }
 form button {
-  width: 33%;
-  padding: 10px;
-  outline: 0;
+  padding: 0.5rem 1.2rem;
   background-color: #1DA1F2;
+  white-space: nowrap;
   font-family: inherit;
   font-size: 1rem;
   font-weight: 700;
   color: white;
   border: 1px solid black;
   border-radius: 25px;
+  align-self: start;
 }
 
 tweet-card {
